ヒント機能の実装、ハイライトされる色　電球のアイコンの導入など改善の余地あり

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,10 @@
     "xloctime": "cpp",
     "xmemory": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "functional": "cpp",
+    "xhash": "cpp",
+    "list": "cpp",
+    "unordered_map": "cpp"
   }
 }
