--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,41 +17,37 @@ jobs:
 
       # 2. C++コードをコンパイル
       - name: Compile C++ Code (g++)
-        # g++ (msys2) を使うため、Git Bash の 'bash' を指定
-        shell: bash
+        # ★ 解決策1: 'bash' ではなく、Git Bash本体のフルパスを指定します
+        #   (Gitのインストール先が "C:\Program Files\Git" の場合)
+        shell: 'C:\Program Files\Git\bin\bash.exe -e {0}'
         run: |
           echo "Starting SFML build..."
 
           # --- ★ あなたのPC環境に合わせてパスを編集してください ★ ---
 
           # 1. (オプション) g++ へのパス
-          #    もし 'bash: command not found' や 'g++: command not found' が出る場合、
-          #    MSYS2 の g++ がある場所のパスを通します (例↓)
+          #    (もし 'g++: command not found' が出たら、この行の # を外す)
           # export PATH="/c/msys64/ucrt64/bin:$PATH" 
 
           # 2. SFMLライブラリのパス (あなたのPCの絶対パス)
-          SFML_INCLUDE_PATH="C:/sfml/include" # ★ 例: SFMLをインストールした場所の include
-          SFML_LIB_PATH="C:/sfml/lib"       # ★ 例: SFMLをインストールした場所の lib
+          SFML_INCLUDE_PATH="C:/sfml/include" # ★ あなたの環境に合わせる
+          SFML_LIB_PATH="C:/sfml/lib"       # ★ あなたの環境に合わせる
 
           # 3. SFMLの DLL があるパス (実行に必要)
-          SFML_DLL_PATH="C:/sfml/bin"       # ★ 例: SFMLをインストールした場所の bin
+          SFML_DLL_PATH="C:/sfml/bin"       # ★ あなたの環境に合わせる
 
-          # 4. コンパイル対象のソースファイル
-          #    (もし 'Source' フォルダに入れているなら "Source/*.cpp")
-          SOURCE_FILES="*.cpp"               # ★ 例: "main.cpp" や "MyMineSweeper/*.cpp" など
-
-          # 5. 出力先
+          # 4. 出力先
           OUTPUT_DIR="build"
-          OUTPUT_EXE="$OUTPUT_DIR/MyMineSweeper.exe"
 
           # --- ここから下は編集不要 ---
 
           # 出力先フォルダを作成
           mkdir -p $OUTPUT_DIR
 
-          # g++ ビルドコマンドの実行
-          echo "Compiling $SOURCE_FILES..."
-          g++ $SOURCE_FILES -o $OUTPUT_EXE -I"$SFML_INCLUDE_PATH" -L"$SFML_LIB_PATH" -lsfml-graphics -lsfml-window -lsfml-system
+          # ★ 解決策2: あなたが提示した「正解のビルドコマンド」に修正
+          #    (出力先を $OUTPUT_DIR/MyMinesweeper にし、-lsfml-audio を追加)
+          echo "Compiling..."
+          g++ src/main.cpp src/Game.cpp src/Field.cpp src/GameUI.cpp src/GameRenderer.cpp src/SoundManager.cpp src/Solver.cpp -o $OUTPUT_DIR/MyMinesweeper -I"$SFML_INCLUDE_PATH" -L"$SFML_LIB_PATH" -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 
           # ビルド失敗時にCIを停止
           if [ $? -ne 0 ]; then
@@ -59,7 +55,7 @@ jobs:
             exit 1
           fi
 
-          echo "Build finished: $OUTPUT_EXE"
+          echo "Build finished: $OUTPUT_DIR/MyMinesweeper"
 
           # 6. 必要なDLLをビルドフォルダにコピー (ゲームの実行に必要)
           echo "Copying SFML DLLs..."
@@ -72,4 +68,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Windows-Build
-          path: build/ # build フォルダ全体 (exeとdllが含まれる)
+          # ★ 修正: build フォルダ全体をアップロード
+          path: build/
